--- a/about.html
+++ b/about.html
@@ -263,29 +263,78 @@
             <div class="max-w-xs md:max-w-2xl lg:max-w-screen-xl xl:max-w-screen-xl mx-auto mt-4 rounded">
                 <!-- Tabs -->
                 <ul id="tabs" class="lg:flex lg:justify-center lg:items-center xl:flex xl:justify-center xl:items-center w-full text-center bg-gray-900">
-                  <li class="px-4 py-3 -mb-px font-semibold text-gray-100 rounded-t opacity-50 w-full uppercase"><a id="default-tab" href="#first">Description</a></li>
-                  <li class="px-4 py-3 font-semibold text-gray-100 opacity-50 w-full uppercase"><a href="#second">Reviews</a></li>
-                  <li class="px-4 py-3 font-semibold text-gray-100 opacity-50 w-full uppercase"><a href="#third">shipping</a></li>
-                  <li class="px-4 py-3 font-semibold text-gray-100 opacity-50 w-full uppercase"><a href="#fourth">shipping Policy</a></li>
-                  <li class="px-4 py-3 font-semibold text-gray-100 opacity-50 w-full uppercase"><a href="#fifth">size chart</a></li>
+                  <li class="px-4 py-3 -mb-px font-semibold text-gray-100 rounded-t w-full uppercase"><a id="default-tab" href="#first">Description</a></li>
+                  <li class="px-4 py-3 font-semibold text-gray-100  w-full uppercase"><a href="#second">Reviews</a></li>
+                  <li class="px-4 py-3 font-semibold text-gray-100 w-full uppercase"><a href="#third">shipping Policy</a></li>
+                  <li class="px-4 py-3 font-semibold text-gray-100 w-full uppercase"><a href="#fourth">size chart</a></li>
                 </ul>
 
                 <!-- Tab Contents -->
                 <div id="tab-contents">
-                  <div id="first" class="p-4">
-                    First tab
+                  <div id="first" class="bg-gray-100 xl:px-10 xl:py-7 lg:px-10 lg:py-7 md:px-3 md:py-3 px-4 py-4">
+                      <div class="">
+                          <p class="text-gray-600 xl:text-base lg:text-base md:text-base text-sm font-rubic">On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue; and equal blame belongs to those who fail in their duty through weakness of will, which is the same as saying through shrinking from toil and pain. These cases are perfectly simple and easy to distinguish. In a free hour, when our power of choice is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided. But in certain circumstances and owing to the claims of duty or the obligations of business it will frequently occur that pleasures have to be repudiated and annoyances accepted. The wise man therefore always holds in these matters to this principle of selection: he rejects pleasures to secure other greater pleasures, or else he endures pains to avoid worse pains.</p>
+                          <p class="pt-5 text-gray-600 xl:text-base lg:text-base md:text-base text-sm font-rubic">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</p>
+                      </div>
                   </div>
-                  <div id="second" class="hidden p-4">
-                    Second tab
+                  <div id="second" class="hidden bg-gray-100 xl:px-10 xl:py-7 lg:px-10 lg:py-7 md:px-3 md:py-3 px-2 py-2">
+                     <div class="xl:px-10 xl:py-7 lg:px-10 lg:py-7 px-3 py-3 border border-gray-300">
+                        <div class="xl:p-5 lg:p-4 md:p-3 p-2">
+                            <div class="xl:flex lg:flex">
+                                <div class="">
+                                    <img class="h-auto w-36 mr-5" src="images/1.jpg" alt="image">
+                                </div>
+                                <div class="border border-gray-300 xl:ml-5 lg:ml-5 ml-0 relative">
+                                    <div class="h-4 w-4 bg-gray-100 absolute transform rotate-45 top-3 -left-2 border-l-2 border-b-2 border-fuchsia-600border-fuchsia-600
+                                    border-gray-300"></div>
+                                    <div class="p-4">
+                                        <div class="">
+                                            <i class="fas fa-star text-pink-600"></i>
+                                            <i class="fas fa-star text-pink-600"></i>
+                                            <i class="fas fa-star text-pink-600"></i>
+                                            <i class="far fa-star text-pink-600"></i>
+                                            <i class="far fa-star text-pink-600"></i>
+                                        </div>
+                                        <h1 class="text-gray-900 font-bold font-rubic">Admin - <span class="text-gray-500 font-normal"> December 19, 2020</span></h1>
+                                        <p class="pt-2 text-gray-600 xl:text-base lg:text-base md:text-base text-sm font-rubic">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin in viverra ex, vitae vestibulum arcu. Duis sollicitudin metus sed lorem commodo, eu dapibus libero interdum. Morbi convallis viverra erat, et aliquet orci congue vel. Integer in odio enim. Pellentesque in dignissim leo. Vivamus varius ex sit amet quam tincidunt iaculis.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="mt-5">
+                                <h1 class="text-gray-900 font-bold font-rubic">Add a review</h1>
+                                <p class="pt-1 text-gray-600 xl:text-base lg:text-base md:text-base text-sm font-rubic">Your email address will not be published. Required fields are marked *</p>
+                                <p class="text-gray-700 text-xs pt-1"></p>
+                                <div class="pt-2">
+                                    <i class="fas fa-star text-pink-600"></i>
+                                    <i class="fas fa-star text-pink-600"></i>
+                                    <i class="fas fa-star text-pink-600"></i>
+                                    <i class="far fa-star text-pink-600"></i>
+                                    <i class="far fa-star text-pink-600"></i>
+                                </div>
+                            </div>
+                            <div class="mt-5">
+                                <div class="">
+                                    <form action="">
+                                        <div class="xl:flex xl:justify-between xl:items-center lg:flex lg:justify-between lg:items-center">
+                                            <input class="xl:w-3/6 xl:h-12 lg:w-3/6 lg:h-12 w-full h-12 xl:mb-0 lg:mb-0 md:mb-5 mb-5 px-5 border border-gray-200 rounded outline-none xl:mr-5 lg:mr-3" type="text" placeholder="Name*">
+                                            <input class="xl:w-3/6 xl:h-12 lg:w-3/6 lg:h-12 w-full h-12 px-5 border border-gray-200 rounded outline-none xl:ml-5 lg:ml-3" type="text" placeholder="Email*">
+                                        </div>
+                                        <textarea class="mt-5 autoexpand tracking-wide py-2 h-32 px-5 mb-3 leading-relaxed appearance-none block w-full bg-white border border-gray-200 rounded border border-gray-200 rounded outline-none"
+                                        id="message" type="text" placeholder="Message*"></textarea>
+                                        <div class="mt-5">
+                                            <button type="button" class="bg-gray-900 text-gray-100 px-7 py-2 rounded hover:bg-red-600 hover:text-white">Submit</button>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                     </div>
                   </div>
                   <div id="third" class="hidden p-4">
                     Third tab
                   </div>
                   <div id="fourth" class="hidden p-4">
                     Fourth tab
-                  </div>
-                  <div id="fifth" class="hidden p-4">
-                    fifth tab
                   </div>
                 </div>
               </div>
@@ -539,14 +588,14 @@
 
                 for (let i = 0; i < tabContents.children.length; i++) {
 
-                tabTogglers[i].parentElement.classList.remove("opacity-100", "bg-red-500");  tabContents.children[i].classList.remove("hidden");
+                tabTogglers[i].parentElement.classList.remove("opacity-100", "bg-pink-600");  tabContents.children[i].classList.remove("hidden");
                 if ("#" + tabContents.children[i].id === tabName) {
                 continue;
                 }
                 tabContents.children[i].classList.add("hidden");
 
                 }
-                e.target.parentElement.classList.add("-mb-px", "opacity-100", "bg-red-500");
+                e.target.parentElement.classList.add("-mb-px", "opacity-100", "bg-pink-600");
                 });
                 });
 
