--- a/about.html
+++ b/about.html
@@ -167,15 +167,15 @@
                 <div class="pt-44 max-w-xs md:max-w-2xl lg:max-w-screen-xl xl:max-w-screen-xl mx-auto lg:flex lg:justify-center xl:flex xl:justify-center">
                     <div class="w-full xl:w-2/5 lg:w-2/6 md:w-2/3 lg:mr-5 xl:mr-5 mx-auto">
                         <div class="relative">
-                            <img class="w-full h-auto" src="images/product-2.jpg" alt="">
+                            <img class="w-full h-auto border border-gray-200" src="bg-trans-image/1 (1).jpg" alt="">
                             <span class="absolute bg-red-500 text-white px-3 py-0 rounded top-0 left-0">-29%</span>
                         </div>
                         <div class="flex justify-center items-center px-3">
                             <div class="flex justify-center items-center py-4">
-                                <img class="xl:w-24 xl:h-auto lg:w-16 lg:h-auto md:w-20 md:h-auto w-12 h-auto mr-2 cursor-pointer" src="images/product-2.jpg" alt="">
-                                <img class="xl:w-24 xl:h-auto lg:w-16 lg:h-auto md:w-20 md:h-auto w-12 h-auto mx-2 cursor-pointer" src="images/product-3.jpg" alt="">
-                                <img class="xl:w-24 xl:h-auto lg:w-16 lg:h-auto md:w-20 md:h-auto w-12 h-auto mx-2 cursor-pointer" src="images/product-4.jpg" alt="">
-                                <img class="xl:w-24 xl:h-auto lg:w-16 lg:h-auto md:w-20 md:h-auto w-12 h-auto mx-2 cursor-pointer" src="images/product-5.jpg" alt="">
+                                <img class="xl:w-24 xl:h-auto lg:w-16 lg:h-auto md:w-20 md:h-auto w-12 h-auto mr-2 cursor-pointer border border-gray-200" src="bg-trans-image/1 (1).jpg" alt="">
+                                <img class="xl:w-24 xl:h-auto lg:w-16 lg:h-auto md:w-20 md:h-auto w-12 h-auto mx-2 cursor-pointer border border-gray-200" src="bg-trans-image/2.jpg" alt="">
+                                <img class="xl:w-24 xl:h-auto lg:w-16 lg:h-auto md:w-20 md:h-auto w-12 h-auto mx-2 cursor-pointer border border-gray-200" src="bg-trans-image/3.jpg" alt="">
+                                <img class="xl:w-24 xl:h-auto lg:w-16 lg:h-auto md:w-20 md:h-auto w-12 h-auto mx-2 cursor-pointer border border-gray-200" src="bg-trans-image/2.jpg" alt="">
                             </div>
                         </div>
                     </div>
@@ -260,10 +260,10 @@
             </div>
         </div>
         <div class="container mx-auto mt-20">
-            <div class="max-w-xs md:max-w-2xl lg:max-w-screen-xl xl:max-w-screen-xl mx-auto mt-4 rounded">
+            <div class="max-w-xs md:max-w-2xl lg:max-w-screen-xl xl:max-w-screen-xl mx-auto mt-4">
                 <!-- Tabs -->
                 <ul id="tabs" class="lg:flex lg:justify-center lg:items-center xl:flex xl:justify-center xl:items-center w-full text-center bg-gray-900">
-                  <li class="px-4 py-3 -mb-px font-semibold text-gray-100 rounded-t w-full uppercase"><a id="default-tab" href="#first">Description</a></li>
+                  <li class="px-4 py-3 -mb-px font-semibold text-gray-100 w-full uppercase"><a id="default-tab" href="#first">Description</a></li>
                   <li class="px-4 py-3 font-semibold text-gray-100  w-full uppercase"><a href="#second">Reviews</a></li>
                   <li class="px-4 py-3 font-semibold text-gray-100 w-full uppercase"><a href="#third">shipping Policy</a></li>
                   <li class="px-4 py-3 font-semibold text-gray-100 w-full uppercase"><a href="#fourth">size chart</a></li>
@@ -330,10 +330,34 @@
                         </div>
                      </div>
                   </div>
-                  <div id="third" class="hidden p-4">
-                    Third tab
+                  <div id="third" class="hidden bg-gray-100 xl:px-10 xl:py-7 lg:px-10 lg:py-7 md:px-3 md:py-3 px-2 py-2">
+                        <h1 class="text-gray-600 xl:text-base lg:text-base md:text-base text-sm font-rubic">Shipping policy for our store</h1>
+                        <p class="text-gray-600 xl:text-base lg:text-base md:text-base text-sm font-rubic">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate</p>
+                        <ul class="xl:ml-4 mt-4 leading-loose">
+                            <li class="text-gray-600 xl:text-base lg:text-base md:text-base text-sm font-rubic">
+                                1-2 business days (Typically by end of day)
+                            </li>
+                            <li class="text-gray-600 xl:text-base lg:text-base md:text-base text-sm font-rubic">
+                                <a href="#" class="">30 days money back guaranty</a>
+                            </li>
+                            <li class="text-gray-600 xl:text-base lg:text-base md:text-base text-sm font-rubic">
+                                24/7 live support
+                            </li>
+                            <li class="text-gray-600 xl:text-base lg:text-base md:text-base text-sm font-rubic">
+                                odio dignissim qui blandit praesent
+                            </li>
+                            <li class="text-gray-600 xl:text-base lg:text-base md:text-base text-sm font-rubic">
+                                luptatum zzril delenit augue duis dolore
+                            </li>
+                            <li class="text-gray-600 xl:text-base lg:text-base md:text-base text-sm font-rubic">
+                                te feugait nulla facilisi.
+                            </li>
+                        </ul>
+                        <p class="pt-2 text-gray-600 xl:text-base lg:text-base md:text-base text-sm font-rubic">Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum</p>
+                        <p class="pt-2 text-gray-600 xl:text-base lg:text-base md:text-base text-sm font-rubic">claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per</p>
+                        <p class="pt-2 text-gray-600 xl:text-base lg:text-base md:text-base text-sm font-rubic">seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.</p>
                   </div>
-                  <div id="fourth" class="hidden p-4">
+                  <div id="fourth" class="hidden bg-gray-100 xl:px-10 xl:py-7 lg:px-10 lg:py-7 md:px-3 md:py-3 px-2 py-2">
                     Fourth tab
                   </div>
                 </div>
