--- a/about.html
+++ b/about.html
@@ -164,7 +164,7 @@
 
         <div class="container-fluid">
             <div class="container mx-auto">
-                <div class="pt-44 max-w-xs md:max-w-2xl lg:max-w-screen-xl xl:max-w-screen-xl mx-auto lg:flex lg:justify-center xl:flex xl:justify-center">
+                <div class="pt-44 max-w-xs md:max-w-2xl lg:max-w-screen-xl xl:max-w-screen-2xl mx-auto lg:flex lg:justify-center xl:flex xl:justify-center">
                     <div class="w-full xl:w-2/5 lg:w-2/6 md:w-2/3 lg:mr-5 xl:mr-5 mx-auto">
                         <div class="relative">
                             <img class="w-full h-auto border border-gray-200" src="bg-trans-image/1 (1).jpg" alt="">
@@ -358,7 +358,58 @@
                         <p class="pt-2 text-gray-600 xl:text-base lg:text-base md:text-base text-sm font-rubic">seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.</p>
                   </div>
                   <div id="fourth" class="hidden bg-gray-100 xl:px-10 xl:py-7 lg:px-10 lg:py-7 md:px-3 md:py-3 px-2 py-2">
-                    Fourth tab
+                      <h1 class="">Size Chart</h1>
+                      <div class="overflow-scroll h-60">
+                        <table class="m-5 w-full mx-auto bg-gray-100 border border-gray-200">
+                            <tr class="text-left border-b-2 border-gray-200">
+                              <td class="px-4 py-3 text-gray-700 dark;text-gray-100">UK</th>
+                              <td class="px-4 py-3 text-gray-700 dark;text-gray-100">18</th>
+                              <td class="px-4 py-3 text-gray-700 dark;text-gray-100">20</th>
+                              <td class="px-4 py-3 text-gray-700 dark;text-gray-100">22</th>
+                              <td class="px-4 py-3 text-gray-700 dark;text-gray-100">24</th>
+                              <td class="px-4 py-3 text-gray-700 dark;text-gray-100">26</th>
+                            </tr>
+                            
+                            <tr class="bg-gray-100 border-b border-gray-200">
+                                <td class="px-4 py-3 text-gray-700 dark;text-gray-100">European</th>
+                                <td class="px-4 py-3 text-gray-700 dark;text-gray-100">18</th>
+                                <td class="px-4 py-3 text-gray-700 dark;text-gray-100">20</th>
+                                <td class="px-4 py-3 text-gray-700 dark;text-gray-100">22</th>
+                                <td class="px-4 py-3 text-gray-700 dark;text-gray-100">24</th>
+                                <td class="px-4 py-3 text-gray-700 dark;text-gray-100">26</th>
+                            </tr> 
+                          <!-- each row -->
+                            <tr class="bg-gray-100 border-b border-gray-200">
+                                <td class="px-4 py-3 text-gray-700 dark;text-gray-100">usa</th>
+                                <td class="px-4 py-3 text-gray-700 dark;text-gray-100">18</th>
+                                <td class="px-4 py-3 text-gray-700 dark;text-gray-100">20</th>
+                                <td class="px-4 py-3 text-gray-700 dark;text-gray-100">22</th>
+                                <td class="px-4 py-3 text-gray-700 dark;text-gray-100">24</th>
+                                <td class="px-4 py-3 text-gray-700 dark;text-gray-100">26</th>
+                            </tr> 
+                          <!-- each row -->
+                            <tr class="bg-gray-100">
+                                <td class="px-4 py-3 text-gray-700 dark;text-gray-100">Australia</th>
+                                <td class="px-4 py-3 text-gray-700 dark;text-gray-100">18</th>
+                                <td class="px-4 py-3 text-gray-700 dark;text-gray-100">20</th>
+                                <td class="px-4 py-3 text-gray-700 dark;text-gray-100">22</th>
+                                <td class="px-4 py-3 text-gray-700 dark;text-gray-100">24</th>
+                                <td class="px-4 py-3 text-gray-700 dark;text-gray-100">26</th>
+                            </tr> 
+                          <!-- each row -->
+                           <!-- each row -->
+                           <tr class="bg-gray-100">
+                            <td class="px-4 py-3 text-gray-700 dark;text-gray-100">Canada</th>
+                            <td class="px-4 py-3 text-gray-700 dark;text-gray-100">18</th>
+                            <td class="px-4 py-3 text-gray-700 dark;text-gray-100">20</th>
+                            <td class="px-4 py-3 text-gray-700 dark;text-gray-100">22</th>
+                            <td class="px-4 py-3 text-gray-700 dark;text-gray-100">24</th>
+                            <td class="px-4 py-3 text-gray-700 dark;text-gray-100">26</th>
+                        </tr> 
+                      <!-- each row -->
+                          
+                          </table>
+                      </div>
                   </div>
                 </div>
               </div>
