--- a/about.html
+++ b/about.html
@@ -165,7 +165,7 @@
         <div class="container-fluid">
             <div class="container mx-auto">
                 <div class="pt-44 max-w-xs md:max-w-2xl lg:max-w-screen-xl xl:max-w-screen-2xl mx-auto lg:flex lg:justify-center xl:flex xl:justify-center">
-                    <div class="w-full xl:w-2/5 lg:w-2/6 md:w-2/3 lg:mr-5 xl:mr-5 mx-auto">
+                    <div class="w-full xl:w-2/5 lg:w-2/4 md:w-2/2 lg:mr-5 xl:mr-5 mx-auto">
                         <div class="relative">
                             <img class="w-full h-auto border border-gray-200" src="bg-trans-image/1 (1).jpg" alt="">
                             <span class="absolute bg-red-500 text-white px-3 py-0 rounded top-0 left-0">-29%</span>
@@ -179,7 +179,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="w-full xl:w-2/5 lg:w-2/6 lg:ml-5 xl:ml-5 md:w-2/3 mx-auto xl:mt-0 lg:mt-0 mt-10">
+                    <div class="w-full xl:w-2/5 lg:w-2/4 lg:ml-5 xl:ml-5 md:w-2/2 mx-auto xl:mt-0 lg:mt-0 mt-10">
                         <div class="">
                             <div class="border-b border-gray-300 pb-5">
                                 <h1 class="text-xs md:text-md xl:text-md lg:text-md">Glory fo the Snow</h1>
@@ -256,7 +256,7 @@
                                </div>
                         </div>
                     </div>
-                </div>
+                    </div>
             </div>
         </div>
         <div class="container mx-auto mt-20">
@@ -414,6 +414,94 @@
                 </div>
               </div>
         </div>
+        <div class="container mx-auto MT-44">
+            <div class="max-w-xs md:max-w-2xl lg:max-w-screen-xl xl:max-w-screen-xl mx-auto mt-4">
+                <div class="grid grid-cols-1 grid-rows-1 sm:grid sm:grid-cols-1 sm:grid-rows-1 md:grid md:grid-cols-2 md:grid-rows-2 lg:grid lg:grid-cols-3 lg:grid-rows-2 xl:grid xl:grid-cols-4 xl:grid-rows-1 gap-4">
+                    <div class="prod-single-cart">
+                        <a href="about.html" class="relative"> <img class="w-full" src="images/product-2.jpg" alt="" />
+                    </a>
+                        <div class="px-5 pt-4 pb-3 prod-cart-content">
+                            <a href="#" class="prod-cart-heading font-rubic">Dutchman's Breeches</a>
+                            <p class="prod-cart-price font-rubic">$100.00 <span class="prod-price-throught font-rubic">$120.00</span></p>
+                            <div class="my-5">
+                                <a href="" class="prod-cart-icon-link-1st group">
+                                    <i class="far fa-heart prod-cart-icon group-hover:text-white"></i>
+                                </a>
+                                <a href="" class="prod-cart-icon-link group">
+                                    <i class="fas fa-shopping-bag prod-cart-icon group-hover:text-white"></i>
+                                </a>
+                                <a href="" class="prod-cart-icon-link group">
+                                    <i class="fas fa-search-plus prod-cart-icon group-hover:text-white"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="prod-single-cart overflow-hidden">
+                        <a href="about.html" class="relative"> <img class="w-full" src="images/product-3.jpg" alt="" />
+                            <span class="absolute font-rubic font-bold h-16 -top-5 -left-20 w-56 bg-pink-600 text-white flex justify-center items-center transform -rotate-45 pt-5 pr-7">sale!</span>
+                    </a>
+                        <div class="px-5 pt-4 pb-3 prod-cart-content">
+                            <a href="#" class="prod-cart-heading font-rubic">Dutchman's Breeches</a>
+                            <p class="prod-cart-price font-rubic">$100.00 <span class="prod-price-throught font-rubic">$120.00</span></p>
+                            <div class="my-5">
+                                <a href="" class="prod-cart-icon-link-1st group">
+                                    <i class="far fa-heart prod-cart-icon group-hover:text-white"></i>
+                                </a>
+                                <a href="" class="prod-cart-icon-link group">
+                                    <i class="fas fa-shopping-bag prod-cart-icon group-hover:text-white"></i>
+                                </a>
+                                <a href="" class="prod-cart-icon-link group">
+                                    <i class="fas fa-search-plus prod-cart-icon group-hover:text-white"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="prod-single-cart">
+                        <a href="about.html" class="relative"> <img class="w-full" src="images/product-4.jpg" alt="" />
+                    </a>
+                        <div class="px-5 pt-4 pb-3 prod-cart-content">
+                            <a href="#" class="prod-cart-heading font-rubic">Dutchman's Breeches</a>
+                            <p class="prod-cart-price font-rubic">$100.00 <span class="prod-price-throught font-rubic">$120.00</span></p>
+                            <div class="my-5">
+                                <a href="" class="prod-cart-icon-link-1st group">
+                                    <i class="far fa-heart prod-cart-icon group-hover:text-white"></i>
+                                </a>
+                                <a href="" class="prod-cart-icon-link group">
+                                    <i class="fas fa-shopping-bag prod-cart-icon group-hover:text-white"></i>
+                                </a>
+                                <a href="" class="prod-cart-icon-link group">
+                                    <i class="fas fa-search-plus prod-cart-icon group-hover:text-white"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="prod-single-cart overflow-hidden">
+                        <a href="about.html" class="relative"> <img class="w-full" src="images/product-1.jpg" alt="" />
+                            <span class="absolute font-rubic font-bold h-16 -top-5 -left-20 w-56 bg-pink-600 text-white flex justify-center items-center transform -rotate-45 pt-5 pr-7">sale!</span>
+                    </a>
+                        <div class="px-5 pt-4 pb-3 prod-cart-content">
+                            <a href="#" class="prod-cart-heading font-rubic">Dutchman's Breeches</a>
+                            <p class="prod-cart-price font-rubic">$100.00 <span class="prod-price-throught font-rubic">$120.00</span></p>
+                            <div class="my-5">
+                                <a href="" class="prod-cart-icon-link-1st group">
+                                    <i class="far fa-heart prod-cart-icon group-hover:text-white"></i>
+                                </a>
+                                <a href="" class="prod-cart-icon-link group">
+                                    <i class="fas fa-shopping-bag prod-cart-icon group-hover:text-white"></i>
+                                </a>
+                                <a href="" class="prod-cart-icon-link group">
+                                    <i class="fas fa-search-plus prod-cart-icon group-hover:text-white"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 
         <div class="container-fluid bg-gray-100 py-20 mt-20 dark:bg-gray-800 border-t border-gray-100 dark:border-t dark:border-gray-600">
             <div class="container mx-auto">
