added checkout page

--- a/single-product-.html
+++ b/single-product-.html
@@ -43,7 +43,7 @@
         <div class="w-full text-gray-700 bg-gray-100 fixed top-0 z-40">
             <div x-data="{ open: false }" class="py-2 flex flex-col max-w-screen-xl mx-auto md:items-center md:justify-between md:flex-row xl:px-0 lg:px-10 md:px-5 px-5">
                 <div class="p-4 flex flex-row items-center justify-between">
-                    <a href="#" class="text-lg font-semibold tracking-widest text-gray-900 uppercase h-auto w-20 rounded-lg dark:text-white focus:outline-none focus:shadow-outline">
+                    <a href="index.html" class="text-lg font-semibold tracking-widest text-gray-900 uppercase h-auto w-20 rounded-lg dark:text-white focus:outline-none focus:shadow-outline">
                         <h1 class="text-gray-800 font-rubic dark:text-gray-800">Logo</h1>
                     </a>
                     <div class="md:ml-1 lg:ml-36 xl:ml-56">
@@ -202,21 +202,21 @@
                                 <p class="stock">Available: <span class="text-red-400 text-xs md:text-md xl:text-lg lg:text-lg">In stock</span></p>
                                 <p class="stock-title">Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum.</p>
                                 <div class="py-5">
-                                    <div class="flex items-center">
-                                        <input class="" type="checkbox" id="protectionPlan" />
+                                    <div class="flex items-center pt-1">
+                                        <input class="inp-check" type="checkbox" id="protectionPlan" />
                                         <label class="inp-title" for="protectionPlan"> Protection Plan: <span class="text-red-400">2 year $4.99</span></label>
                                     </div>
                                     <div class="flex items-center pt-1">
-                                        <input class="inp-check" type="checkbox" id="protectionPlan" />
-                                        <label class="inp-title" for="protectionPlan"> Remote Holder: <span class="text-red-400">$9.99</span></label>
+                                        <input class="inp-check" type="checkbox" id="protectionPlan1" />
+                                        <label class="inp-title" for="protectionPlan1"> Remote Holder: <span class="text-red-400">$9.99</span></label>
                                     </div>
                                     <div class="flex items-center pt-1">
-                                        <input class="inp-check" type="checkbox" id="protectionPlan" />
-                                        <label class="inp-title" for="protectionPlan">  Koral Alexa Voice Remote Case:  <span class="text-red-400 ">Red $16.99</span></label>
+                                        <input class="inp-check" type="checkbox" id="protectionPlan2" />
+                                        <label class="inp-title" for="protectionPlan2">  Koral Alexa Voice Remote Case:  <span class="text-red-400 ">Red $16.99</span></label>
                                     </div>
                                      <div class=" flex items-center pt-1">
-                                        <input class="inp-check" type="checkbox" id="protectionPlan" />
-                                        <label class="inp-title" for="protectionPlan"> Amazon Basics HD Antenna: <span class="text-red-400"> 25 Mile $14.99</span></label>
+                                        <input class="inp-check" type="checkbox" id="protectionPlan3" />
+                                        <label class="inp-title" for="protectionPlan3"> Amazon Basics HD Antenna: <span class="text-red-400"> 25 Mile $14.99</span></label>
                                     </div>
                                 </div>
                             </div>
