--- a/checkout.html
+++ b/checkout.html
@@ -149,8 +149,32 @@
         <div class="container mx-auto mt-44">
             <div class="max-w-xs md:max-w-2xl lg:max-w-screen-xl xl:max-w-screen-xl mx-auto">
                 <div class="mb-10">
-                    <div class="dark:bg-transparent dark:border-gray-600 dark:text-gray-100 bg-gray-100 w-full border border-gray-100 px-5 py-5 text-xl text-gray-700 font-semibold font-rubic text-xs lg:text-base xl:text-base">Returning customer? <span class="text-red-400">Click here to login</span></div>
-                    <div class="dark:bg-transparent dark:border-gray-600 dark:text-gray-100 bg-gray-100 w-full border border-gray-100 px-5 py-5 text-xl text-gray-700 font-semibold font-rubic mt-5 text-xs lg:text-base xl:text-base">Have a coupon? <span class="text-red-400"> Click here to enter your code</span></div>
+                    <div class="dark:bg-transparent dark:border-gray-600 dark:text-gray-100 bg-gray-100 w-full border border-gray-100 px-5 py-5 text-xl text-gray-700 font-semibold font-rubic text-xs lg:text-base xl:text-base cursor-pointer">Returning customer? <span class="text-red-400" id="loginbtn">Click here to login</span></div>
+                    <div class="border border-gray-200 xl:p-8 hidden mt-3 dark:border-gray-400" id="login">
+                        <h1 class="text-gray-700 font-bold text-xl pb-3">Please login your account</h1>
+                        <div class=" xl:flex xl:justify-between xl:items-center lg:flex lg:justify-between lg:items-center">
+                            <input class="dark:bg-transparent dark:border-gray-600 dark:text-gray-100 border border-gray-50 bg-gray-100 focus:bg-transparent dark:border-gray-500 text-xs md:text-sm lg:text-sm xl:text-sm border-transparent border-gray-200 focus:outline-none focus:ring-1 focus:ring-red-600 focus:border-transparent xl:w-3/6 xl:h-12 lg:w-3/6 lg:h-12 w-full h-12 xl:mb-0 lg:mb-0 md:mb-5 mb-5 px-5 xl:mr-5 lg:mr-3" type="text" placeholder="Enter your name">
+                            <input class="dark:bg-transparent dark:border-gray-600 dark:text-gray-100 border border-gray-50 bg-gray-100 focus:bg-transparent border-transparent border-gray-200 text-xs md:text-sm lg:text-sm xl:text-sm focus:outline-none focus:ring-1 focus:ring-red-600 focus:border-transparent xl:w-3/6 xl:h-12 lg:w-3/6 lg:h-12 w-full h-12 xl:mb-0 lg:mb-0 md:mb-5 mb-5 px-5 xl:mr-5 lg:mr-3" type="text" placeholder="Enter your email address">
+                        </div>
+                        <div class="flex justify-start items-center py-5">
+                            <button type="button" class="bg-red-500 text-gray-100 px-10 py-3 font-semibold">LOGIN</button>
+                            <div class="flex items-center ml-4">
+                                <input class="inp-check" type="checkbox" id="createaccound" />
+                                <label class="inp-title dark:text-gray-100" for="createaccound">Remember me</label>
+                            </div>
+                        </div>
+                        <a href="register.html" class="">Lost your password?</a>
+                    </div>
+                    <div class="dark:bg-transparent dark:border-gray-600 dark:text-gray-100 bg-gray-100 w-full border border-gray-100 px-5 py-5 text-xl text-gray-700 font-semibold font-rubic mt-5 text-xs lg:text-base xl:text-base cursor-pointer">Have a coupon? <span class="text-red-400" id="couponBtn"> Click here to enter your code</span></div>
+                    <div class="border border-gray-200 xl:p-8 hidden mt-3 dark:border-gray-400" id="coupon">
+                        <h1 class="text-gray-700 font-bold text-xl pb-3">If you have a coupon code, please apply it below.</h1>
+                        <div class=" xl:flex xl:justify-between xl:items-center lg:flex lg:justify-between lg:items-center">
+                            <input class="dark:bg-transparent dark:border-gray-600 dark:text-gray-100 border border-gray-50 bg-gray-100 focus:bg-transparent dark:border-gray-500 text-xs md:text-sm lg:text-sm xl:text-sm border-transparent border-gray-200 focus:outline-none focus:ring-1 focus:ring-red-600 focus:border-transparent w-full h-12 xl:mb-0 lg:mb-0 md:mb-5 mb-5 px-5 xl:mr-5 lg:mr-3" type="text" placeholder="Enter your name">
+                        </div>
+                        <div class="flex justify-start items-center py-5">
+                            <button type="button" class="bg-red-500 text-gray-100 px-10 py-3 font-semibold">APPLY COUPON</button>
+                        </div>
+                    </div>
                 </div>
                 <div class="w-full">
                     <h1 class="text-gray-600 text-lg font-rubic pb-4 dark:text-gray-100">Billing Details</h1>
@@ -497,5 +521,21 @@
                 alert('Pay via PayPal; you can pay with your credit card if you don’t have a PayPal account.');
             });
         </script>
+
+
+        <script type="text/javascript">
+            const logBtn = document.getElementById("loginbtn");
+            const logingSec = document.getElementById("login");
+            logBtn.addEventListener('click', function(){
+                logingSec.classList.toggle("hidden");
+            })
+            const couponButton = document.getElementById("couponBtn");
+            const couponsec = document.getElementById("coupon");
+            couponButton.addEventListener('click', function(){
+                couponsec.classList.toggle("hidden");
+            })
+        </script>
+
+
     </body>
 </html>
