--- a/index.html
+++ b/index.html
@@ -298,70 +298,70 @@
                         <div class="border-b-2 border-gray-200 py-5 dark:border-gray-600">
                             <h1 class="pb-3 text-xl font-semibold text-gray-800">By Brand</h1>
                             <div class="my-4 flex items-center">
-                                <input class="h-4 w-4 mr-2" type="checkbox" id="userRemember" />
+                                <input class="h-4 w-4 mr-2 rounded border-gray-400" type="checkbox" id="userRemember" />
                                 <label for="userRemember">Poure</label>
                             </div>
                             <div class="my-4 flex items-center">
-                                <input class="h-4 w-4 mr-2" type="checkbox" id="userRemember1" />
+                                <input class="h-4 w-4 mr-2 rounded border-gray-400" type="checkbox" id="userRemember1" />
                                 <label for="userRemember1">Poure</label>
                             </div>
                             <div class="my-4 flex items-center">
-                                <input class="h-4 w-4 mr-2" type="checkbox" id="userRemember2" />
+                                <input class="h-4 w-4 mr-2 rounded border-gray-400" type="checkbox" id="userRemember2" />
                                 <label for="userRemember2">Poure</label>
                             </div>
                             <div class="my-4 flex items-center">
-                                <input class="h-4 w-4 mr-2" type="checkbox" id="userRemember3" />
+                                <input class="h-4 w-4 mr-2 rounded border-gray-400" type="checkbox" id="userRemember3" />
                                 <label for="userRemember3">Poure</label>
                             </div>
                             <div class="my-4 flex items-center">
-                                <input class="h-4 w-4 mr-2" type="checkbox" id="userRemember4" />
+                                <input class="h-4 w-4 mr-2 rounded border-gray-400" type="checkbox" id="userRemember4" />
                                 <label for="userRemember4">Poure</label>
                             </div>
                             <div class="my-4 flex items-center">
-                                <input class="h-4 w-4 mr-2" type="checkbox" id="userRemember5" />
+                                <input class="h-4 w-4 mr-2 rounded border-gray-400" type="checkbox" id="userRemember5" />
                                 <label for="userRemember5">Poure</label>
                             </div>
                             <div class="my-4 flex items-center">
-                                <input class="h-4 w-4 mr-2" type="checkbox" id="userRemember6" />
+                                <input class="h-4 w-4 mr-2 rounded border-gray-400" type="checkbox" id="userRemember6" />
                                 <label for="userRemember6">Poure</label>
                             </div>
                             <div class="my-4 flex items-center">
-                                <input class="h-4 w-4 mr-2" type="checkbox" id="userRemember7" />
+                                <input class="h-4 w-4 mr-2 rounded border-gray-400" type="checkbox" id="userRemember7" />
                                 <label for="userRemember7">Poure</label>
                             </div>
                             <div class="my-4 flex items-center">
-                                <input class="h-4 w-4 mr-2" type="checkbox" id="userRemember8" />
+                                <input class="h-4 w-4 mr-2 rounded border-gray-400" type="checkbox" id="userRemember8" />
                                 <label for="userRemember8">Poure</label>
                             </div>
                         </div>
                         <div class="border-b-2 border-gray-200 py-5 dark:border-gray-600">
                             <h1 class="pb-3 text-xl font-semibold text-gray-800">By Color</h1>
                             <div class="my-4 flex items-center">
-                                <input class="h-4 w-4 mr-2" type="checkbox" id="userRemember9" />
+                                <input class="h-4 w-4 mr-2 rounded border-gray-400" type="checkbox" id="userRemember9" />
                                 <label for="userRemember9">Black</label>
                             </div>
                             <div class="my-4 flex items-center">
-                                <input class="h-4 w-4 mr-2" type="checkbox" id="userRemember10" />
+                                <input class="h-4 w-4 mr-2 rounded border-gray-400" type="checkbox" id="userRemember10" />
                                 <label for="userRemember10">Blue</label>
                             </div>
                             <div class="my-4 flex items-center">
-                                <input class="h-4 w-4 mr-2" type="checkbox" id="userRemember11" />
+                                <input class="h-4 w-4 mr-2 rounded border-gray-400" type="checkbox" id="userRemember11" />
                                 <label for="userRemember11">Green</label>
                             </div>
                             <div class="my-4 flex items-center">
-                                <input class="h-4 w-4 mr-2" type="checkbox" id="userRemember12" />
+                                <input class="h-4 w-4 mr-2 rounded border-gray-400" type="checkbox" id="userRemember12" />
                                 <label for="userRemember12">Red</label>
                             </div>
                             <div class="my-4 flex items-center">
-                                <input class="h-4 w-4 mr-2" type="checkbox" id="userRemember13" />
+                                <input class="h-4 w-4 mr-2 rounded border-gray-400" type="checkbox" id="userRemember13" />
                                 <label for="userRemember13">Yellow</label>
                             </div>
                             <div class="my-4 flex items-center">
-                                <input class="h-4 w-4 mr-2" type="checkbox" id="userRemember14" />
+                                <input class="h-4 w-4 mr-2 rounded border-gray-400" type="checkbox" id="userRemember14" />
                                 <label for="userRemember14">Pink</label>
                             </div>
                             <div class="my-4 flex items-center">
-                                <input class="h-4 w-4 mr-2" type="checkbox" id="userRemember15" />
+                                <input class="h-4 w-4 mr-2 rounded border-gray-400" type="checkbox" id="userRemember15" />
                                 <label for="userRemember15">White</label>
                             </div>
                         </div>
@@ -551,9 +551,10 @@
                             <div class="">
                                 <div class="prod-cart-header">
                                     <div class="prod-single-cart">
-                                        <a href="single-product-.html" class="relative"> <img class="w-full" src="images/product-1.jpg" alt="" />
-                                        <span class="bg-red-500 text-white absolute px-3 py-0 rounded top-0 left-0">10%</span>
-                                    </a>
+                                        <a href="single-product-.html" class="relative">
+                                            <img class="w-full" src="images/product-1.jpg" alt="" />
+                                            <span class="bg-red-500 text-white absolute px-3 py-0 rounded top-0 left-0">10%</span>
+                                        </a>
                                         <div class="px-5 pt-4 pb-3 prod-cart-content">
                                             <a href="#" class="prod-cart-heading font-rubic">Dutchman's Breeches</a>
                                             <p class="prod-cart-price font-rubic">$100.00 <span class="prod-price-throught font-rubic">$120.00</span></p>
@@ -571,8 +572,7 @@
                                         </div>
                                     </div>
                                     <div class="prod-single-cart">
-                                        <a href="single-product-.html" class="relative"> <img class="w-full" src="images/product-2.jpg" alt="" />
-                                            <span class="bg-red-500 text-white absolute px-3 py-0 rounded top-0 left-0">10%</span></a>
+                                        <a href="single-product-.html" class="relative"> <img class="w-full" src="images/product-2.jpg" alt="" /> <span class="bg-red-500 text-white absolute px-3 py-0 rounded top-0 left-0">10%</span></a>
                                         <div class="px-5 pt-4 pb-3 prod-cart-content">
                                             <a href="#" class="prod-cart-heading font-rubic">Dutchman's Breeches</a>
                                             <p class="prod-cart-price font-rubic">$100.00 <span class="prod-price-throught font-rubic">$120.00</span></p>
@@ -609,8 +609,7 @@
                                     </div>
 
                                     <div class="prod-single-cart">
-                                        <a href="single-product-.html" class="relative"> <img class="w-full" src="images/product-4.jpg" alt="" />
-                                         <span class="bg-red-500 text-white absolute px-3 py-0 rounded top-0 left-0">10%</span></a>
+                                        <a href="single-product-.html" class="relative"> <img class="w-full" src="images/product-4.jpg" alt="" /> <span class="bg-red-500 text-white absolute px-3 py-0 rounded top-0 left-0">10%</span></a>
                                         <div class="px-5 pt-4 pb-3 prod-cart-content">
                                             <a href="#" class="prod-cart-heading font-rubic">Dutchman's Breeches</a>
                                             <p class="prod-cart-price font-rubic">$100.00 <span class="prod-price-throught font-rubic">$120.00</span></p>
@@ -646,8 +645,7 @@
                                         </div>
                                     </div>
                                     <div class="prod-single-cart">
-                                        <a href="single-product-.html" class="relative"> <img class="w-full" src="images/product-2.jpg" alt="" />
-                                            <span class="bg-red-500 text-white absolute px-3 py-0 rounded top-0 left-0">10%</span></a>
+                                        <a href="single-product-.html" class="relative"> <img class="w-full" src="images/product-2.jpg" alt="" /> <span class="bg-red-500 text-white absolute px-3 py-0 rounded top-0 left-0">10%</span></a>
                                         <div class="px-5 pt-4 pb-3 prod-cart-content">
                                             <a href="#" class="prod-cart-heading font-rubic">Dutchman's Breeches</a>
                                             <p class="prod-cart-price font-rubic">$100.00 <span class="prod-price-throught font-rubic">$120.00</span></p>
