--- a/login.html
+++ b/login.html
@@ -152,10 +152,7 @@
                     <!-- Row -->
                     <div class="w-full xl:w-3/4 lg:w-11/12 flex">
                         <!-- Col -->
-                        <div
-                            class="w-full h-auto bg-gray-400 hidden lg:block lg:w-1/2 bg-cover rounded-l-lg"
-                            style="background-image: url('https://source.unsplash.com/K4mSJ7kc0As/600x800')"
-                        ></div>
+                        <div class="w-full h-auto bg-gray-400 hidden lg:block lg:w-1/2 bg-cover rounded-l-lg" style="background-image: url('https://source.unsplash.com/K4mSJ7kc0As/600x800');"></div>
                         <!-- Col -->
                         <div class="w-full lg:w-1/2 bg-white p-5 rounded-lg lg:rounded-l-none">
                             <h3 class="pt-4 text-2xl text-center">Welcome Back!</h3>
@@ -181,36 +178,27 @@
                                         type="password"
                                         placeholder="******************"
                                     />
-                                    <p class="text-xs italic text-red-500">Please choose a password.</p>
+                                    <p class="mt-2 text-xs italic text-red-500">Please choose a password.</p>
                                 </div>
                                 <div class="mb-4">
-                                    <input class="mr-2 leading-tight" type="checkbox" id="checkbox_id" />
+                                    <input class="mr-2 leading-tight rounded border-gray-400" type="checkbox" id="checkbox_id" />
                                     <label class="text-sm" for="checkbox_id">
                                         Remember Me
                                     </label>
                                 </div>
                                 <div class="mb-6 text-center">
-                                    <button
-                                        class="w-full px-4 py-2 font-bold text-white bg-blue-500 rounded-full hover:bg-blue-700 focus:outline-none focus:shadow-outline"
-                                        type="button"
-                                    >
+                                    <button class="w-full px-4 py-2 font-bold text-white bg-blue-500 rounded-full hover:bg-blue-700 focus:outline-none focus:shadow-outline" type="button">
                                         Sign In
                                     </button>
                                 </div>
                                 <hr class="mb-6 border-t" />
                                 <div class="text-center">
-                                    <a
-                                        class="inline-block text-sm text-blue-500 align-baseline hover:text-blue-800"
-                                        href="register.html"
-                                    >
+                                    <a class="inline-block text-sm text-blue-500 align-baseline hover:text-blue-800" href="register.html">
                                         Create an Account!
                                     </a>
                                 </div>
                                 <div class="text-center">
-                                    <a
-                                        class="inline-block text-sm text-blue-500 align-baseline hover:text-blue-800"
-                                        href="./forgot-password.html"
-                                    >
+                                    <a class="inline-block text-sm text-blue-500 align-baseline hover:text-blue-800" href="./forgot-password.html">
                                         Forgot Password?
                                     </a>
                                 </div>
