fixed some issues

--- a/single-product-.html
+++ b/single-product-.html
@@ -317,10 +317,10 @@
                                 <div class="">
                                     <form action="">
                                         <div class="xl:flex xl:justify-between xl:items-center lg:flex lg:justify-between lg:items-center">
-                                            <input class="dark:bg-gray-800 dark:border-gray-500 xl:w-3/6 xl:h-12 lg:w-3/6 lg:h-12 w-full h-12 xl:mb-0 lg:mb-0 md:mb-5 mb-5 px-5 border border-gray-200 rounded outline-none xl:mr-5 lg:mr-3" type="text" placeholder="Name*">
-                                            <input class="dark:bg-gray-800 dark:border-gray-500 xl:w-3/6 xl:h-12 lg:w-3/6 lg:h-12 w-full h-12 px-5 border border-gray-200 rounded outline-none xl:ml-5 lg:ml-3" type="text" placeholder="Email*">
+                                            <input class="dark:bg-gray-800 dark:border-gray-600 border border-gray-300 px-3 py-2 rounded-lg shadow-sm focus:outline-none focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500 xl:w-3/6 xl:h-12 lg:w-3/6 lg:h-12 w-full h-12 xl:mb-0 lg:mb-0 md:mb-5 mb-5 px-5 border border-gray-200 rounded outline-none xl:mr-5 lg:mr-3" type="text" placeholder="Name*">
+                                            <input class="dark:bg-gray-800 dark:border-gray-600 border border-gray-300 px-3 py-2 rounded-lg shadow-sm focus:outline-none focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500 xl:w-3/6 xl:h-12 lg:w-3/6 lg:h-12 w-full h-12 px-5 border border-gray-200 rounded outline-none xl:ml-5 lg:ml-3" type="text" placeholder="Email*">
                                         </div>
-                                        <textarea class="dark:bg-gray-800 dark:border-gray-500 mt-5 autoexpand tracking-wide py-2 h-32 px-5 mb-3 leading-relaxed appearance-none block w-full bg-white border border-gray-200 rounded border border-gray-200 rounded outline-none"
+                                        <textarea class="dark:bg-gray-800 dark:border-gray-600 border border-gray-300 px-3 py-2 rounded-lg mt-6 shadow-sm focus:outline-none focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500 py-2 h-32 px-5 mb-3 leading-relaxed appearance-none block w-full bg-white border border-gray-200 rounded border border-gray-200 rounded outline-none"
                                         id="message" type="text" placeholder="Message*"></textarea>
                                         <div class="mt-5">
                                             <button type="button" class="bg-gray-900 text-gray-100 px-7 py-2 rounded hover:bg-red-600 hover:text-white">Submit</button>
