--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                         </div>
                         <div class="pt-4 border-b-2 border-gray-200 dark:border-gray-600">
                             <div class="relative pb-2">
-                                <li class="collapse-header collapsible font-rubic">Birthday Bouquets <i class="fas fa-angle-down absolute right-0"></i></li>
+                                <li class="collapse-header collapsible font-rubic group ">Birthday Bouquets <i class="fas fa-angle-down absolute right-0 text-gray-400 group-hover:text-red-400"></i></li>
                                 <div class="content max-h-0 overflow-hidden" style="transition: 0.4s;">
                                     <ul class="pl-3 py-3">
                                         <li class="col-item">
@@ -177,7 +177,7 @@
                                 </div>
                             </div>
                             <div class="relative pb-2">
-                                <li class="collapse-header collapsible font-rubic">Birthday Bouquets <i class="fas fa-angle-down absolute right-0"></i></li>
+                                <li class="collapse-header collapsible font-rubic group">Birthday Bouquets <i class="fas fa-angle-down absolute right-0 text-gray-400 group-hover:text-red-400"></i></li>
                                 <div class="content max-h-0 max-h-0 overflow-hidden" style="transition: 0.4s;">
                                     <ul class="pl-3 py-3">
                                         <li class="col-item">
@@ -199,7 +199,7 @@
                                 </div>
                             </div>
                             <div class="relative pb-2">
-                                <li class="collapse-header collapsible font-rubic">Birthday Bouquets <i class="fas fa-angle-down absolute right-0"></i></li>
+                                <li class="collapse-header collapsible font-rubic group">Birthday Bouquets <i class="fas fa-angle-down absolute right-0 text-gray-400 group-hover:text-red-400"></i></li>
                                 <div class="content max-h-0 max-h-0 overflow-hidden" style="transition: 0.4s;">
                                     <ul class="pl-3 py-3">
                                         <li class="col-item">
@@ -267,7 +267,7 @@
 
                                             <div class="absolute z-30 w-3 h-3 top-1 left-0 bg-red-500 rounded-full -mt-2 -ml-1" x-bind:style="'left: '+minthumb+'%'" style="top: 4px !important;"></div>
 
-                                            <div class="absolute z-30 w-3 h-3 top-1 right-0 bg-red-500 rounded-full -mt-2 -mr-3" x-bind:style="'right: '+maxthumb+'%'"></div>
+                                            <div class="absolute z-30 w-3 h-3 top-1 right-0 bg-red-500 rounded-full -mt-2 -mr-2" x-bind:style="'right: '+maxthumb+'%'"></div>
                                         </div>
                                     </div>
 
